crates/stems-api/src/snapshots/stems_api__tests__event.snap
---
source: crates/stems-api/src/lib.rs
expression: sample_event()
---
{
  "ts": "2026-09-26T12:00:00Z",
  "seq": 7,
  "kind": "stem.state",
  "stem": "api",
  "from": "starting",
  "to": "healthy",
  "reason": "health check passed",
  "actor": "cli:alice",
  "data": {
    "pid": 4242
  }
}
