crates/stems-api/src/snapshots/stems_api__tests__response_ok.snap
---
source: crates/stems-api/src/lib.rs
expression: ok
---
{
  "jsonrpc": "2.0",
  "id": 1,
  "result": {
    "pong": true
  }
}
